syntax = "proto3";

package keyauth.role;
option go_package = "github.com/infraboard/keyauth/pkg/role";

import "pkg/role/pb/enum.proto";
import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";

// CreateRoleRequest 创建角色请求
message CreateRoleRequest {
    // 角色类型
    RoleType type = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
    // 角色名称
    string name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name" validate:"required,lte=30"'}
        ];
    // 角色描述
    string description =3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"description" json:"description" validate:"lte=400"'}
        ];
    // 角色关联的其他信息，比如展示的视图
    map<string,string> meta =4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"meta" json:"meta" validate:"lte=400"'}
        ];
    // 读权限
    repeated CreatePermssionRequest permissions = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"permissions" json:"permissions"'}
        ];                   
}

message CreatePermssionRequest {
        // 效力
        EffectType effect = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"effect" json:"effect"'}
        ];
    // 服务ID
    string service_id = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"service_id" json:"service_id"'}
        ];
    // 资源列表
    string resource_name = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"resource_name" json:"resource_name"'}
        ];
    // 维度
    string label_key = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label_key" json:"label_key"'}
        ];
    // 适配所有值
    bool match_all = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"match_all" json:"match_all"'}
        ];
    // 标识值
    repeated string label_values = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label_values" json:"label_values"'}
        ]; 
}

// QueryRoleRequest 列表查询
message QueryRoleRequest {
    page.PageRequest page = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"page" json:"page"'}
        ];
    RoleType type = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
    string domain = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"domain"'}
        ];  
}

// DescribeRoleRequest role详情
message DescribeRoleRequest {
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
    string name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"name,omitempty" validate:"required,lte=64"'}
        ];
    bool with_permissions = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"with_permissions" json:"with_permissions"'}
        ];
    RoleType type = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
}

// DeleteRoleRequest role删除
message DeleteRoleRequest {
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id" validate:"required,lte=64"'}
        ];
    bool delete_policy = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"delete_policy"'}
        ];
}

message QueryPermissionRequest {
    page.PageRequest page = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"page" json:"page"'}
        ];
    string role_id = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"role_id" validate:"required,lte=64"'}
        ];
    bool skip_itmes = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"skip_itmes"'}
        ];
}

// DescribeRoleRequest role详情
message DescribePermissionRequest {
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
}

message AddPermissionToRoleRequest {
    string role_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"role_id" validate:"required,lte=64"'}
        ];
    repeated CreatePermssionRequest permissions = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"permissions" validate:"required"'}
        ];
}

message RemovePermissionFromRoleRequest {
    string role_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"role_id" validate:"required,lte=64"'}
        ];
    bool remove_all = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"remove_all"'}
        ];;
    repeated string permission_id = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"permission_id"'}
        ];
}

message UpdatePermissionRequest {
    // permission id
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id" validate:"required,lte=64"'}
        ];
    // 维度
    string label_key = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"label_key"'}
        ];
    // 适配所有值
    bool match_all = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"match_all"'}
        ];
    // 标识值
    repeated string label_values = 4[
        (google.protobuf.field_tag) = {struct_tag: 'json:"label_values"'}
        ];     
}